like feature bug fix

--- a/spring-boot/src/main/resources/templates/project.hbs
+++ b/spring-boot/src/main/resources/templates/project.hbs
@@ -100,49 +100,53 @@
 
         <div class="info-contents discussion">
             <!--<ul class="discussion-list best">-->
-                <!--<li class="each-discussion">-->
-                    <!--<table>-->
-                       <!--<tr>-->
-                           <!--<div class="best-tag">BEST</div><br>-->
-                           <!--<td class="left">-->
-                               <!--<div class="writer-info-zone">-->
-                                   <!--<div class="profile"></div>-->
-                                   <!--<p class="nickname">Marriott82</p>-->
-                                   <!--<p class="written-date">2017.04.06</p>-->
-                               <!--</div><br>-->
-                               <!--<div class="discussion-info">-->
-                                   <!--<button class="reply">답글 6</button>-->
-                                   <!--<button class="likes">234</button>-->
-                               <!--</div>-->
-                           <!--</td>-->
-                           <!--<td class="right">-->
-                               <!--<p class="discussion-contents">-->
-                                   <!--진선미 의원님이 지난 7월 발의한 '공중화장실 등에 관한 법률 일부개정법률안'과-->
-                                   <!--'성폭력범죄의 처벌 등에 관한 특례법 일부개정법률안'이 각각 행정안전위원회 법안심사소위원회(11월 24일)와-->
-                                   <!--여성가족위원회 법안심사소위원회(11월 23일)로 회부되었습니다. 앞으로 법안심사소위원회에서는 해당 법안에 대한-->
-                               <!--</p>-->
-                           <!--</td>-->
-                       <!--</tr>-->
-                    <!--</table>-->
-                <!--</li>-->
+            <!--<li class="each-discussion">-->
+            <!--<table>-->
+            <!--<tr>-->
+            <!--<div class="best-tag">BEST</div><br>-->
+            <!--<td class="left">-->
+            <!--<div class="writer-info-zone">-->
+            <!--<div class="profile"></div>-->
+            <!--<p class="nickname">Marriott82</p>-->
+            <!--<p class="written-date">2017.04.06</p>-->
+            <!--</div><br>-->
+            <!--<div class="discussion-info">-->
+            <!--<button class="reply">답글 6</button>-->
+            <!--<button class="likes">234</button>-->
+            <!--</div>-->
+            <!--</td>-->
+            <!--<td class="right">-->
+            <!--<p class="discussion-contents">-->
+            <!--진선미 의원님이 지난 7월 발의한 '공중화장실 등에 관한 법률 일부개정법률안'과-->
+            <!--'성폭력범죄의 처벌 등에 관한 특례법 일부개정법률안'이 각각 행정안전위원회 법안심사소위원회(11월 24일)와-->
+            <!--여성가족위원회 법안심사소위원회(11월 23일)로 회부되었습니다. 앞으로 법안심사소위원회에서는 해당 법안에 대한-->
+            <!--</p>-->
+            <!--</td>-->
+            <!--</tr>-->
+            <!--</table>-->
+            <!--</li>-->
             <!--</ul>-->
 
             <ul class="discussion-list new">
-                <div id="likes-zone">
-                    {{#each likes}}
-                        <p>{{this.likable_id}}</p>
-                    {{/each}}
-                </div>
+                {{#authenticatedUser}}
+                    <div id="likes-zone">
+                        {{#each likes}}
+                            <p>{{this.likable_id}}</p>
+                        {{/each}}
+                    </div>
+                {{/authenticatedUser}}
                 {{#each comments}}
                     <li class="each-discussion" data-item="{{this.id}}">
                         <table>
                             <tr>
                                 <td class="left">
                                     <div class="writer-info-zone">
-                                        <div class="profile"></div><br>
+                                        <div class="profile"></div>
+                                        <br>
                                         <p class="nickname">{{this.writer.nickname}}</p>
                                         <p class="written-date">{{this.created_at}}</p>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="discussion-info">
                                         <!--<button class="reply">답글 6</button>-->
                                         <button class="likes" id="like-{{this.id}}">{{this.likes_count}}</button>
