--- a/spring-boot/src/main/resources/templates/project.hbs
+++ b/spring-boot/src/main/resources/templates/project.hbs
@@ -12,7 +12,7 @@
     <img class="info-img" src="/img/info.png">
 </div>
 <main class="main">
-    <img class="main-img" src="/img/sub_02.png">
+    <img class="main-img" src="{{project.image}}">
     <div class="desc">
         <ul class="category-list">
             {{#project.subject}}
