--- a/spring-boot/src/main/resources/public/css/projectSearch.css
+++ b/spring-boot/src/main/resources/public/css/projectSearch.css
@@ -61,14 +61,14 @@ ul.project-list {
     list-style: none;
     padding: 0;
     width: 90%;
-    margin: 30px 0 0 17px;
+    margin: 30px auto;
 }
 
 li.project {
     display: inline-block;
     width: 100%;
     background-color: #FFFFFF;
-    margin: 0 0 30px 0;
+    margin: 0 10px 30px 10px;
     max-width: 380px;
     vertical-align: middle;
     box-shadow:
