--- a/spring-boot/src/main/resources/public/css/carousel.css
+++ b/spring-boot/src/main/resources/public/css/carousel.css
@@ -31,6 +31,7 @@
             0 1px 5px 0 rgba(0,0,0,.12);
     text-align: center;
     vertical-align: middle;
+    color: #ffffff;
 }
 
 .main-carousel strong {
