--- a/spring-boot/src/main/resources/templates/adminAssemblyman.hbs
+++ b/spring-boot/src/main/resources/templates/adminAssemblyman.hbs
@@ -23,18 +23,20 @@
                     <th class="act">관리</th>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>김삼화</td>
-                    <td>바른미래당</td>
-                    <td>행정안전위원회</td>
-                    <td>abc@email.com</td>
-                    <td>프로필 이미지</td>
-                    <td>
-                        <button>수정</button>
-                        <button>삭제</button>
-                    </td>
-                </tr>
+                {{#each assemblymen}}
+                    <tr data-item="{{this.id}}">
+                        <td>{{this.id}}</td>
+                        <td class="name"><input class="input-name" value="{{this.name}}"></td>
+                        <td class="party"><input class="input-party" value="{{this.party}}"></td>
+                        <td class="committee"><input class="input-committee" value="{{this.committee_id}}"></td>
+                        <td class="email"><input class="input-email" value="{{this.email}}"></td>
+                        <td class="image"><img class="image" data-item="{{this.image}}"></td>
+                        <td>
+                            <button class="update-btn">수정</button>
+                            <button class="delete-btn">삭제</button>
+                        </td>
+                    </tr>
+                {{/each}}
             </tbody>
         </table>
     </div>
@@ -43,27 +45,33 @@
         <form class="add-assemblyman">
             <div class="input-zone">
                 <label for="input-name">이름</label>
-                <input type="text" class="name" id="input-name" placeholder="이름을 입력해주세요">
+                <input type="text" class="name" id="input-name" placeholder="이름을 입력해주세요" autocomplete="name">
             </div>
 
             <div class="input-zone">
                 <label for="select-party">정당</label>
                 <select id="select-party">
-                    <option>더불어민주당</option>
-                    <option>자유한국당</option>
+                    <option value="더불어민주당">더불어민주당</option>
+                    <option value="자유한국당">자유한국당</option>
+                    <option value="바른미래당">바른미래당</option>
+                    <option value="민주평화당">민주평화당</option>
+                    <option value="정의당">정의당</option>
+                    <option value="대한애국당">대한애국당</option>
                 </select>
             </div>
 
             <div class="input-zone">
                 <label for="select-committee">상임위원회</label>
                 <select id="select-committee">
-                    <option>행정안전위원회</option>
+                    {{#each committees}}
+                        <option value="{{this.id}}">{{this.name}}</option>
+                    {{/each}}
                 </select>
             </div>
 
             <div class="input-zone">
                 <label for="input-email">이메일</label>
-                <input type="email" id="input-email">
+                <input type="email" id="input-email" autocomplete="email">
             </div>
 
             <div class="input-zone">
@@ -78,7 +86,7 @@
 </main>
 <!--<script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>-->
 <script src="https://cdn.ckeditor.com/4.10.0/standard-all/ckeditor.js"></script>
-<script type="text/javascript" src="/js/projectForm.js"></script>
+<script type="text/javascript" src="/dist/adminAssemblyman-bundle.js"></script>
 {{> include/footer}}
 </body>
 </html>
