--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -97,9 +97,9 @@
                         <label class="sub-info" for= "title">20자 이내로 적어주세요.</label>
                         <input type="text" class="title" id="title">
                     </div>
-                    <div class="desc">
-                        <p class="sub-info">제안 제목은 이렇게 사용됩니다!</p>
-                    </div>
+                    <!--<div class="desc">-->
+                        <!--<p class="sub-info">제안 제목은 이렇게 사용됩니다!</p>-->
+                    <!--</div>-->
                 </td>
             </tr>
             <tr class="button">
@@ -188,13 +188,13 @@
                         <div class="image-preview">
                             이미지 업로드<br>
                             이미지를 드래그 또는 업로드 해주세요.<br>
-                            (가로: 000px, 세로 000px 이상으로 올려주세요)
+                            (가로: 350px, 세로 400px 이상으로 올려주세요)
                         </div>
                         <input class="project-img" type="file">
                     </div>
-                    <div class="desc">
-                        <p class="sub-info">대표 이미지는 이렇게 사용됩니다!</p>
-                    </div>
+                    <!--<div class="desc">-->
+                        <!--<p class="sub-info">대표 이미지는 이렇게 사용됩니다!</p>-->
+                    <!--</div>-->
 
                 </td>
             </tr>
