--- a/spring-boot/src/main/resources/public/css/mainProjects.css
+++ b/spring-boot/src/main/resources/public/css/mainProjects.css
@@ -59,6 +59,13 @@ li.project {
             0 2px 2px 0 rgba(0,0,0,.14),
             0 3px 1px -2px rgba(0,0,0,.2),
             0 1px 5px 0 rgba(0,0,0,.12);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+}
+
+li.project:hover {
+    opacity: 0.8;
+    background-color: #e1e1e1;
 }
 
 li.project.long {
