--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -529,6 +529,24 @@ button.likes.is-active {
     display: inline-block;
 }
 
+button.load-all-comments {
+    margin: 20px auto;
+    display: block;
+    font-size: 20px;
+    padding: 10px 20px;
+    background: none;
+    border-radius: 0.5em;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
+}
+
+button.load-all-comments:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
 #write-comment-zone {
     text-align: center;
 }
