--- a/spring-boot/src/main/resources/public/css/projectSearch.css
+++ b/spring-boot/src/main/resources/public/css/projectSearch.css
@@ -62,6 +62,7 @@ ul.project-list {
     padding: 0;
     width: 90%;
     margin: 30px auto;
+    text-align: center;
 }
 
 li.project {
@@ -75,6 +76,13 @@ li.project {
             0 2px 2px 0 rgba(0,0,0,.14),
             0 3px 1px -2px rgba(0,0,0,.2),
             0 1px 5px 0 rgba(0,0,0,.12);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+}
+
+li.project:hover {
+    opacity: 0.8;
+    background-color: #e1e1e1;
 }
 
 li.project.long {
@@ -85,7 +93,8 @@ li.project.long {
 .project-img {
     width: 100%;
     height: 250px;
-    background-color: palevioletred;
+    background-image: url("/img/logo-icon.png");
+    background-size: cover;
 }
 
 .project .status {
