--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -157,7 +157,7 @@
                 <td>
                     <h5>제안에 대한 구체적인 소개입니다. 제안 배경과 목적, 지향하는 개선방향, 향후 계획 등
                         제안의 내용이 구체적일수록 사람들에게 제안을 더 잘 이해시킬 수 있습니다.<br>
-                        이미지와 영상을 적절히 활용하여 시민들의 참여를 이끌어보세요!<br>
+                        이미지와 영상을 적절히 활용하여 시민들의 참여를 이끌어보세요!<br><br>
                         이미지는 에디터의 이미지 버튼이 아닌 '복사', '붙여넣기'을 사용해주세요.
                     </h5>
                     <div class="input-zone">
