--- a/spring-boot/src/main/resources/templates/my.hbs
+++ b/spring-boot/src/main/resources/templates/my.hbs
@@ -10,7 +10,7 @@
 <main>
     <h1>마이페이지</h1>
     <div class="demo-card-square mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand">
+        <div class="mdl-card__title mdl-card--expand" style="background-image: url({{user.image}})">
             <h2 class="mdl-card__title-text">Click to change</h2>
             <input type="file" class="profile-img">
         </div>
