--- a/spring-boot/src/main/resources/templates/checking.hbs
+++ b/spring-boot/src/main/resources/templates/checking.hbs
@@ -27,8 +27,9 @@
 </header>
 <main>
     <img src="/img/logo-icon.png">
-    <h2>홈페이지 개편작업이 진행중입니다.</h2>
-    <h3>불편을 끼쳐드려 죄송합니다.</h3>
+    <h2>국회톡톡이 새 단장을 합니다.</h2>
+    <h3>시민입법제안 플랫폼 ‘국회톡톡’이 더 나은 서비스를 제공하기 위해 잠시 휴식을 갖습니다. 한층 새로워진 모습으로 다시 만나요!</h3>
+    <h4>서비스 임시중단 기간: 2018년 8월 00일 00시 ~ 2018년 8월 00일 00시</h4>
 </main>
 
 </body>
