--- a/spring-boot/src/main/resources/templates/my.hbs
+++ b/spring-boot/src/main/resources/templates/my.hbs
@@ -9,8 +9,9 @@
 {{> include/header}}
 <main>
     <h1>마이페이지</h1>
+    <img src="{{this.authenticatedUser.image}}" />
     <div class="demo-card-square mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand" style="background-image: url({{user.image}})">
+        <div class="mdl-card__title mdl-card--expand" style="background-image: url({{this.authenticatedUser.image}})">
             <h2 class="mdl-card__title-text">Click to change</h2>
             <input type="file" class="profile-img">
         </div>
