--- a/spring-boot/src/main/resources/templates/project.hbs
+++ b/spring-boot/src/main/resources/templates/project.hbs
@@ -46,7 +46,7 @@
         <div class="percentage-zone">
             <div class="percentage"></div>
         </div>
-        <p class="count">{{project.participations_count}}</p>
+        <p class="count" data-item="{{project.participations_count}}">{{project.participations_count}}명</p>
         <p class="percentage-number" data-item="{{project.participations_goal_count}}">78%</p>
         {{#participations}}
             <button class="join-btn is-active">참여취소</button>
