project edit feature

--- a/spring-boot/src/main/resources/templates/adminProject.hbs
+++ b/spring-boot/src/main/resources/templates/adminProject.hbs
@@ -13,7 +13,7 @@
     <div class="page">
         <h3 id="{{project.id}}">{{project.title}}</h3>
         <div class="options">
-            <a href="/administrator/projectForm/1"><button class="projectForm">제안 내용 수정</button></a>
+            <a href="/administrator/projectForm/{{project.id}}"><button class="projectForm">제안 내용 수정</button></a>
             <button class="participation-list">참여 리스트 다운</button>
             <a href="/administrator/projects/{{project.id}}/timelines"><button class="update-timeline">타임라인 수정</button></a>
             <button class="suggestions">건의 내용 확인</button>
