--- a/spring-boot/src/main/resources/templates/project.hbs
+++ b/spring-boot/src/main/resources/templates/project.hbs
@@ -142,6 +142,17 @@
             </div>
         </div><!--discussion-->
     </div>
+    <div class="modal">
+        <h5 class="committee-name">상임위원회</h5>
+        <label for="modal-participate">참여 의원</label>
+        <ul id="modal-participate"></ul>
+
+        <label for="modal-reject">거부 의원</label>
+        <ul id="modal-reject"></ul>
+
+        <label for="modal-no-response">무응답 의원</label>
+        <ul id="modal-no-response"></ul>
+    </div>
 </main>
 {{> include/footer}}
 <script type="text/javascript" src="/dist/project-bundle.js"></script>
