--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -318,6 +318,10 @@ ul#committee {
     padding: 0;
 }
 
+.each-committee:hover {
+    cursor: pointer;
+}
+
 ul#committee li {
     margin: 3px 5px;
     padding: 4px 9px;
@@ -567,6 +571,44 @@ button.load-all-comments:hover {
     font-size: 20px;
     font-weight: bold;
     border-radius: 10px;
+}
+
+div.modal {
+    display: none;
+    position: fixed;
+    top: 10%;
+    width: 50%;
+    height: 70%;
+    left: 25%;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
+    overflow-y: scroll;
+    z-index: 10;
+}
+
+div.modal.is-visible {
+    display: block;
+}
+
+div.modal ul {
+    list-style: none;
+}
+
+div.modal li {
+    display: none;
+    margin: 10px 15px;
+}
+
+div.modal li.is-visible {
+    display: inline-block;
+}
+
+#modal-no-response .profile-img {
+    opacity: 0.4;
 }
 
 @media screen and (min-width: 400px) {
