mail to manager

--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -18,7 +18,7 @@
                     <h2>청원제안 요건</h2>
                     <p>작성된 내용은 다른 참여자들의 동의의사가 반영된 제안이기 때문에 타인의 참여 이후 수정 및 삭제가 불가능합니다.<br>
                         또한 제안하시려는 내용과 중복되는 기존 제안이 있는지 확인 후 제안해주세요. <br>
-                        매칭 실패한 제안과 동일한 내용이 30일 이내에 다시 올라온 경우 중복제안게시판으로 이동합니다.<br>
+                        <!--매칭 실패한 제안과 동일한 내용이 30일 이내에 다시 올라온 경우 중복제안게시판으로 이동합니다.<br>-->
                         혐오발언, 욕설은 관리자에 의해 삭제될 수 있습니다.<br>
                         국회톡톡의 제안은 특정한 개인 또는 단체의 이익이 아니라, 공익적 목적을 지향합니다.<br>
                         시민제안의 내용은 국회톡톡의 입장과 다를 수 있습니다.
