--- a/spring-boot/src/main/resources/public/css/adminProject.css
+++ b/spring-boot/src/main/resources/public/css/adminProject.css
@@ -23,8 +23,24 @@ ul {
 }
 
 div.input-zone {
-    margin: 20px 0;
+    margin: 40px 0;
 }
+
+div.notice {
+    margin: 30px 0;
+}
+
+div.notice label {
+    vertical-align: top;
+}
+
+div.notice textarea {
+    vertical-align: top;
+    width: 50%;
+    margin: 0 0 50px 20px;
+}
+
+
 div.each-committee {
     border: solid 1px;
     margin: 20px;
