--- a/spring-boot/src/main/resources/templates/adminProject.hbs
+++ b/spring-boot/src/main/resources/templates/adminProject.hbs
@@ -43,6 +43,21 @@
             <input id="platform-uri" value="{{project.running_platform_url}}">
         </div>
 
+        <div class="input-zone notice">
+            {{#project.notice1}}
+                <label for="notice1">알림1</label>
+                <textarea id="notice1">{{project.notice1}}</textarea><br>
+            {{/project.notice1}}
+            {{#project.notice2}}
+                <label for="notice2">알림2</label>
+                <textarea id="notice2">{{project.notice2}}</textarea><br>
+            {{/project.notice2}}
+            {{#project.notice3}}
+                <label for="notice3">알림3</label>
+                <textarea id="notice3">{{project.notice3}}</textarea>
+            {{/project.notice3}}
+        </div>
+
         <div class="input-zone">
             <form>
                 <label for="platform-uri">의원 목록</label>
