--- a/spring-boot/src/main/resources/public/css/my.css
+++ b/spring-boot/src/main/resources/public/css/my.css
@@ -103,7 +103,9 @@ li.project.long {
 .project-img {
     width: 100%;
     height: 250px;
-    background-color: palevioletred;
+    background-image: url("/img/logo-icon.png");
+    background-size: 140%;
+    background-position: center;
 }
 
 .project .status {
@@ -131,6 +133,7 @@ li.project.long {
     font-weight: bold;
     margin: 20px;
     text-align: left;
+    height: 20px;
 }
 
 .category-list {
@@ -168,7 +171,7 @@ li.project.long {
     font-size: 15px;
     font-weight: bold;
     color: #18c3b3;
-    margin: 0;
+    margin: 0 10px 10px 0;
     text-align: left;
 }
 
