--- a/spring-boot/src/main/resources/public/css/projectSearch.css
+++ b/spring-boot/src/main/resources/public/css/projectSearch.css
@@ -112,6 +112,7 @@ li.project.long {
 .project h5 {
     font-size: 1.2em;
     font-weight: bold;
+    height: 20px;
     margin: 20px;
     text-align: left;
 }
@@ -151,7 +152,7 @@ li.project.long {
     font-size: 15px;
     font-weight: bold;
     color: #18c3b3;
-    margin: 0;
+    margin: 0 10px 10px 0;
     text-align: left;
 }
 
