--- a/spring-boot/src/main/resources/templates/include/footer.hbs
+++ b/spring-boot/src/main/resources/templates/include/footer.hbs
@@ -1,7 +1,12 @@
 <footer class="official-account">
     <div class="left-side">
-        <a href="/privacy"><p class="private-info">개인정보취급방침</p></a>
+        <a href="/privacy"><p class="private-info">개인정보 취급방침</p></a>
         <a href="/userAgreement"><p class="terms-of-use">이용약관</p></a>
+        <p>
+            재단법인 와글 | 서울특별시 성동구 왕십리로2길 20, CND빌딩 4층<br>
+            T. 070-8250-0346 E. info@wagl.net<br>
+            ©WAGL since 2015
+        </p>
     </div>
     <div class="right-side">
         <p>info@toktok.io</p>
