--- a/spring-boot/src/main/resources/templates/userForm.hbs
+++ b/spring-boot/src/main/resources/templates/userForm.hbs
@@ -8,7 +8,7 @@
 <body>
     {{> include/header}}
     <div class="signup-zone">
-        <h2>Sign Up</h2>
+        <h2>국회톡톡 회원가입</h2>
         <form class="signup-form">
             <div class="input-zone">
                 <label class="label-email" for="email">E-mail</label>
