--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -125,10 +125,35 @@ li.status.active {
     margin: 60px 0;
 }
 
-#notice li {
+#notice table {
+    margin: 15px auto;
+    width: 80%;
+    border-spacing: 0px;
+    border-collapse: collapse;
+}
+
+#notice td {
     border: solid 2px #18c3b3;
-    margin: 15px;
     padding: 15px;
+}
+
+#notice .image-zone {
+    width: 30px;
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: center;
+}
+
+.notice1 .image-zone {
+    background-image: url("/img/notice1.png");
+}
+
+.notice2 .image-zone {
+    background-image: url("/img/notice2.png");
+}
+
+.notice3 .image-zone {
+    background-image: url("/img/notice3.png");
 }
 
 .step {
