--- a/spring-boot/src/main/resources/templates/include/head.hbs
+++ b/spring-boot/src/main/resources/templates/include/head.hbs
@@ -8,6 +8,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
+<link rel="shortcut icon" href="/img/favicon.png">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 <link rel="stylesheet" href="/css/layout.css">
