projectForm remote controller

--- a/spring-boot/src/main/resources/templates/index.hbs
+++ b/spring-boot/src/main/resources/templates/index.hbs
@@ -14,7 +14,7 @@
                 <p>시민의 제안으로 법안을 만듭니다</p>
                 <h6>새로워진 국회톡톡에서<br>
                 직접 국회에 제안해보세요.</h6>
-                <!--<a class="project-form" href="/projectForm">제안하기</a>-->
+                <a class="project-form" href="/projectForm">제안하기</a>
             </li>
             {{#each mainslides}}
                <a href={{this.url}}>
