--- a/spring-boot/src/main/resources/public/css/projectForm.css
+++ b/spring-boot/src/main/resources/public/css/projectForm.css
@@ -1,3 +1,47 @@
+ul.remote-controller {
+    position: fixed;
+    list-style: none;
+    top: 10%;
+    right: 10%;
+    height: 80%;
+    z-index: 10;
+}
+
+ul.remote-controller li {
+    color: #5d9eee;
+    font-size: 1.5em;
+    padding: 1.5em 1.5em 0 0;
+    border-right: solid #b2b2b2;
+}
+
+ul.remote-controller li:hover {
+    cursor: pointer;
+    color: #0060b5;
+}
+
+ul.remote-controller li.is-active {
+    color: #fd515d;
+}
+
+ul.remote-controller li.no-border {
+    border: none;
+}
+
+ul.remote-controller li::after {
+    content: "•";
+    color: #18c3b3;
+    display: inline-block;
+    width: 1em;
+    position: absolute;
+    right: -0.8em;
+    margin: -10px 0 0 0;
+    font-size: 4em;
+}
+
+ul.remote-controller li.is-active::after {
+    color: aquamarine;
+}
+
 div.page {
     background-color: #FFFFFF;
     margin: 60px 30px;
@@ -64,7 +108,7 @@ div.input-zone {
     border: solid #b2b2b2 1px;
 }
 
-.page .next {
+.page .next, .page .complete {
     height: 40px;
     width: 120px;
     display: block;
@@ -77,6 +121,10 @@ div.input-zone {
             0 2px 2px 0 rgba(0,0,0,.14),
             0 3px 1px -2px rgba(0,0,0,.2),
             0 1px 5px 0 rgba(0,0,0,.12);
+}
+
+.page .next:hover, .page .complete:hover {
+    cursor: pointer;
 }
 
 #page-2 p.writer-notice {
